Use shared code
Drop classes present in shared.