@@ -11,6 +11,7 @@ import eu.maveniverse.maven.mimir.shared.Entry;
 import eu.maveniverse.maven.mimir.shared.Session;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -33,15 +34,17 @@ public class MimirTrustedChecksumsSource implements TrustedChecksumsSource {
             Artifact artifact,
             ArtifactRepository artifactRepository,
             List<ChecksumAlgorithmFactory> checksumAlgorithmFactories) {
-        if (artifactRepository instanceof RemoteRepository remoteRepository) {
+        if (artifactRepository instanceof RemoteRepository) {
+            RemoteRepository remoteRepository = (RemoteRepository) artifactRepository;
             Optional<Session> sessionOptional = MimirUtils.mayGetSession(session);
             if (sessionOptional.isPresent()) {
-                Session ms = sessionOptional.orElseThrow();
+                Session ms = sessionOptional.orElseThrow(() -> new IllegalStateException("Value is not present"));
                 if (ms.repositorySupported(remoteRepository) && ms.artifactSupported(artifact)) {
                     try {
                         Optional<Entry> entry = ms.locate(remoteRepository, artifact);
                         if (entry.isPresent()) {
-                            Entry cacheEntry = entry.orElseThrow();
+                            Entry cacheEntry =
+                                    entry.orElseThrow(() -> new IllegalStateException("Value is not present"));
                             HashMap<String, String> result = new HashMap<>();
                             for (ChecksumAlgorithmFactory checksumAlgorithmFactory : checksumAlgorithmFactories) {
                                 String checksum = cacheEntry.checksums().get(checksumAlgorithmFactory.getName());
@@ -57,7 +60,7 @@ public class MimirTrustedChecksumsSource implements TrustedChecksumsSource {
                 }
             }
         }
-        return Map.of();
+        return Collections.emptyMap();
     }
 
     @Override
